fix: no overflow on desktop

--- a/src/styles/pages/_login.scss
+++ b/src/styles/pages/_login.scss
@@ -2,13 +2,15 @@
 
 .login {
   @include dflex-column;
-  padding: 1em;
+  padding: 2em 1em 0;
   min-height: 100vh;
+  overflow: hidden scroll;
 
   @include desktop {
     flex-direction: row;
     max-height: 100vh;
     padding: 0;
+    overflow: hidden;
   }
 
   &__hero {
@@ -47,6 +49,7 @@
     @include desktop {
       width: 50%;
       padding: 0 3em;
+      background-color: $white;
     }
 
     .title {
@@ -57,11 +60,9 @@
 
       h1 {
         color: $text-secondary;
-        font-size: $heading;
       }
 
       h1 + p {
-        font-size: $body;
         color: $text-primary;
       }
     }
@@ -78,29 +79,25 @@
       input {
         padding: 0.5em 1em;
         height: 3.125rem;
-        font-size: $input-body;
       }
 
       .btn--forgot-password {
         background-color: transparent;
         color: $color-primary;
-        font-size: $body;
         width: max-content;
         text-align: left;
       }
 
       .btn--login {
         background-color: $color-primary;
-        /* TODO: the box shadow is too sharp. make it light ir remove totally. */
-        box-shadow: $box-shadow;
-        color: lighten($color-primary, 80%);
-        font-size: $body;
+        border-radius: 3px;
+        color: lighten($color-primary, 70%);
         font-weight: 500;
-        height: 4.5rem;
+        height: 3rem;
 
         @include transition-all;
         &:hover {
-          background-color: darken($color-primary, 4%);
+          background-color: darken($color-primary, 7%);
           color: lighten($color-primary, 90%);
         }
       }
